demos/devdocs/0.66.0/nvdocument/type-aliases/ExportDocumentData.md
# Type Alias: ExportDocumentData

```ts
type ExportDocumentData = object;
```

Defined in: [nvdocument.ts:424](https://github.com/stada526/niivue/blob/main/packages/niivue/src/nvdocument.ts#L424)

## Properties

### completedAngles

```ts
completedAngles: CompletedAngle[];
```

Defined in: [nvdocument.ts:446](https://github.com/stada526/niivue/blob/main/packages/niivue/src/nvdocument.ts#L446)

---

### completedMeasurements

```ts
completedMeasurements: CompletedMeasurement[];
```

Defined in: [nvdocument.ts:445](https://github.com/stada526/niivue/blob/main/packages/niivue/src/nvdocument.ts#L445)

---

### connectomes

```ts
connectomes: string[];
```

Defined in: [nvdocument.ts:443](https://github.com/stada526/niivue/blob/main/packages/niivue/src/nvdocument.ts#L443)

---

### customData

```ts
customData: string;
```

Defined in: [nvdocument.ts:444](https://github.com/stada526/niivue/blob/main/packages/niivue/src/nvdocument.ts#L444)

---

### encodedDrawingBlob

```ts
encodedDrawingBlob: string;
```

Defined in: [nvdocument.ts:428](https://github.com/stada526/niivue/blob/main/packages/niivue/src/nvdocument.ts#L428)

---

### encodedImageBlobs

```ts
encodedImageBlobs: string[];
```

Defined in: [nvdocument.ts:426](https://github.com/stada526/niivue/blob/main/packages/niivue/src/nvdocument.ts#L426)

---

### imageOptionsArray

```ts
imageOptionsArray: ImageFromUrlOptions[];
```

Defined in: [nvdocument.ts:434](https://github.com/stada526/niivue/blob/main/packages/niivue/src/nvdocument.ts#L434)

---

### imageOptionsMap

```ts
imageOptionsMap: Map<string, number>;
```

Defined in: [nvdocument.ts:432](https://github.com/stada526/niivue/blob/main/packages/niivue/src/nvdocument.ts#L432)

---

### labels

```ts
labels: NVLabel3D[];
```

Defined in: [nvdocument.ts:442](https://github.com/stada526/niivue/blob/main/packages/niivue/src/nvdocument.ts#L442)

---

### meshesString

```ts
meshesString: string;
```

Defined in: [nvdocument.ts:440](https://github.com/stada526/niivue/blob/main/packages/niivue/src/nvdocument.ts#L440)

---

### opts

```ts
opts: NVConfigOptions;
```

Defined in: [nvdocument.ts:438](https://github.com/stada526/niivue/blob/main/packages/niivue/src/nvdocument.ts#L438)

---

### previewImageDataURL

```ts
previewImageDataURL: string;
```

Defined in: [nvdocument.ts:430](https://github.com/stada526/niivue/blob/main/packages/niivue/src/nvdocument.ts#L430)

---

### sceneData

```ts
sceneData: Partial<SceneData>;
```

Defined in: [nvdocument.ts:436](https://github.com/stada526/niivue/blob/main/packages/niivue/src/nvdocument.ts#L436)
