demos/devdocs/0.68.2/nvdocument/type-aliases/ExportDocumentData.md
# Type Alias: ExportDocumentData

```ts
type ExportDocumentData = object;
```

Defined in: [nvdocument.ts:410](https://github.com/stada526/niivue/blob/main/packages/niivue/src/nvdocument.ts#L410)

## Properties

### completedAngles

```ts
completedAngles: CompletedAngle[];
```

Defined in: [nvdocument.ts:425](https://github.com/stada526/niivue/blob/main/packages/niivue/src/nvdocument.ts#L425)

---

### completedMeasurements

```ts
completedMeasurements: CompletedMeasurement[];
```

Defined in: [nvdocument.ts:424](https://github.com/stada526/niivue/blob/main/packages/niivue/src/nvdocument.ts#L424)

---

### connectomes

```ts
connectomes: string[];
```

Defined in: [nvdocument.ts:422](https://github.com/stada526/niivue/blob/main/packages/niivue/src/nvdocument.ts#L422)

---

### customData

```ts
customData: string;
```

Defined in: [nvdocument.ts:423](https://github.com/stada526/niivue/blob/main/packages/niivue/src/nvdocument.ts#L423)

---

### encodedDrawingBlob

```ts
encodedDrawingBlob: string;
```

Defined in: [nvdocument.ts:413](https://github.com/stada526/niivue/blob/main/packages/niivue/src/nvdocument.ts#L413)

---

### encodedImageBlobs

```ts
encodedImageBlobs: string[];
```

Defined in: [nvdocument.ts:412](https://github.com/stada526/niivue/blob/main/packages/niivue/src/nvdocument.ts#L412)

---

### imageOptionsArray

```ts
imageOptionsArray: ImageFromUrlOptions[];
```

Defined in: [nvdocument.ts:416](https://github.com/stada526/niivue/blob/main/packages/niivue/src/nvdocument.ts#L416)

---

### imageOptionsMap

```ts
imageOptionsMap: Map<string, number>;
```

Defined in: [nvdocument.ts:415](https://github.com/stada526/niivue/blob/main/packages/niivue/src/nvdocument.ts#L415)

---

### labels

```ts
labels: NVLabel3D[];
```

Defined in: [nvdocument.ts:421](https://github.com/stada526/niivue/blob/main/packages/niivue/src/nvdocument.ts#L421)

---

### meshesString

```ts
meshesString: string;
```

Defined in: [nvdocument.ts:419](https://github.com/stada526/niivue/blob/main/packages/niivue/src/nvdocument.ts#L419)

---

### meshOptionsArray?

```ts
optional meshOptionsArray: unknown[];
```

Defined in: [nvdocument.ts:420](https://github.com/stada526/niivue/blob/main/packages/niivue/src/nvdocument.ts#L420)

---

### opts

```ts
opts: EncodedNVConfigOptions | Partial<EncodedNVConfigOptions>;
```

Defined in: [nvdocument.ts:418](https://github.com/stada526/niivue/blob/main/packages/niivue/src/nvdocument.ts#L418)

---

### previewImageDataURL

```ts
previewImageDataURL: string;
```

Defined in: [nvdocument.ts:414](https://github.com/stada526/niivue/blob/main/packages/niivue/src/nvdocument.ts#L414)

---

### sceneData

```ts
sceneData: Partial<SceneData>;
```

Defined in: [nvdocument.ts:417](https://github.com/stada526/niivue/blob/main/packages/niivue/src/nvdocument.ts#L417)

---

### title?

```ts
optional title: string;
```

Defined in: [nvdocument.ts:411](https://github.com/stada526/niivue/blob/main/packages/niivue/src/nvdocument.ts#L411)
